api接口文档管理系统设计文档

--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -481,7 +481,7 @@
     </div>
 </footer>
 
-<!-- 模态框（Modal） -->
+<!-- HTTP接口新增模态框（Modal） -->
 <div class="modal fade" id="myHttpModal" tabindex="-1" role="dialog" aria-labelledby="myHttpModalLabel"
      aria-hidden="true">
     <div class="modal-dialog" style="width: 1024px">
@@ -687,7 +687,7 @@
     </div><!-- /.modal -->
 </div>
 
-<!-- 模态框（Modal） -->
+<!-- RPC接口新增模态框（Modal） -->
 <div class="modal fade" id="myRpcModal" tabindex="-1" role="dialog" aria-labelledby="myRpcModalLabel"
      aria-hidden="true">
     <div class="modal-dialog" style="width: 1024px;">
@@ -860,7 +860,7 @@
     </div><!-- /.modal -->
 </div>
 
-<!-- 模态框（Modal） -->
+<!-- HTTP接口预览模态框（Modal） -->
 <div class="modal fade" id="myHttpPreviewModal" tabindex="-1" role="dialog" aria-labelledby="myHttpPreviewModalLabel"
      aria-hidden="true">
     <div class="modal-dialog" style="width: 800px;">
@@ -1026,7 +1026,7 @@
 </div>
 
 
-<!-- 模态框（Modal） -->
+<!-- RPC接口预览模态框（Modal） -->
 <div class="modal fade" id="myRpcPreviewModal" tabindex="-1" role="dialog" aria-labelledby="myRpcPreviewModalLabel"
      aria-hidden="true">
     <div class="modal-dialog" style="width: 800px;">
