--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -71,7 +71,7 @@
                         trElement += ("<td class='text-center'>" +
                         "<button class=\"btn btn-xs btn-success\">编辑</button>" +
                         "&nbsp;&nbsp;" +
-                        "<button class=\"btn btn-xs btn-danger\">删除</button>" +
+                        "<button class=\"btn btn-xs btn-danger\" data-interfaceid='" + data[i].idText + "' data-toggle='modal' data-target='#deleteInterfaceModal'>删除</button>" +
                         "&nbsp;&nbsp;" +
                         "<button class=\"btn btn-xs btn-warning\" data-interfaceid='" + data[i].idText + "' data-toggle=\"modal\" data-target=\"#myHttpPreviewModal\">预览 </button>" +
                         "</td>");
@@ -81,6 +81,23 @@
                 } else {
                     $("#httpTableTBody").html("<tr><td colspan='6'>暂无信息</td></tr>");
                 }
+            });
+
+            //HTTP接口删除事件
+            $("#httpTableTBody").delegate("button.btn-danger", "click", function () {
+                var interfaceId = $(this).attr("data-interfaceid");
+                $("#deleteInterfaceModal").find("button.btn-primary").attr("data-interfaceid", interfaceId);
+            });
+
+            //HTTP接口删除确定事件事件
+            $("#deleteInterfaceModal").delegate("button.btn-primary", "click", function () {
+                var interfaceId = $(this).attr("data-interfaceid")
+                $.get("interfaceHttp/deleteInterfaceHttp/" + interfaceId, null, function (data) {
+                    console.log(data);
+                    if (data.success) {
+                        window.location.reload();
+                    }
+                }, "json");
             });
 
             //HTTP接口预览
@@ -1180,6 +1197,35 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                </button>
+                <button type="button" class="btn btn-primary">
+                    提交更改
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
+
+<!-- 删除接口模态框（Modal） -->
+<div class="modal fade" id="deleteInterfaceModal" tabindex="-1" role="dialog"
+     aria-labelledby="deleteInterfaceModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="deleteInterfaceModalLabel">
+                    删除提示
+                </h4>
+            </div>
+            <div class="modal-body">
+                确定删除该条接口信息吗？
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭
