--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -69,7 +69,7 @@
                         trElement += ("<td class='text-center'>" + data[i].method + "</td>");
                         trElement += ("<td class='text-center'>" + data[i].address + "</td>");
                         trElement += ("<td class='text-center'>" +
-                        "<button class=\"btn btn-xs btn-success\">编辑</button>" +
+                        "<button class=\"btn btn-xs btn-success\" data-interfaceid='" + data[i].idText + "' data-toggle='modal' data-target='#myHttpModal'>编辑</button>" +
                         "&nbsp;&nbsp;" +
                         "<button class=\"btn btn-xs btn-danger\" data-interfaceid='" + data[i].idText + "' data-toggle='modal' data-target='#deleteInterfaceModal'>删除</button>" +
                         "&nbsp;&nbsp;" +
@@ -91,13 +91,33 @@
 
             //HTTP接口删除确定事件事件
             $("#deleteInterfaceModal").delegate("button.btn-primary", "click", function () {
-                var interfaceId = $(this).attr("data-interfaceid")
+                var interfaceId = $(this).attr("data-interfaceid");
                 $.get("interfaceHttp/deleteInterfaceHttp/" + interfaceId, null, function (data) {
                     console.log(data);
                     if (data.success) {
                         window.location.reload();
                     }
                 }, "json");
+            });
+
+            //HTTP接口编辑事件
+            $("#httpTableTBody").delegate("button.btn-success", "click", function () {
+                var interfaceId = $(this).attr("data-interfaceid");
+                $("#myHttpModalLabel").html("编辑HTTP接口");
+                $.get("interfaceHttp/findInterfaceHttp/" + interfaceId, null, function (data) {
+                    console.log(data);
+                    $("input[name='protocolInput']").val(data.protocol);
+                    $("input[name='methodInput']").val(data.method);
+                    $("input[name='transformatInput']").val(data.transformat);
+                    $("input[name='addressInput']").val(data.address);
+                    $("input[name='nameInput']").val(data.name);
+                    $("textarea[name='descriptionInput']").val(data.description);
+                }, "json");
+            });
+
+            //新增HTTP接口
+            $("#addHttpInterfaceBtn").click(function () {
+                $("#myHttpModalLabel").html("新增HTTP接口");
             });
 
             //HTTP接口预览
