--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -104,6 +104,7 @@
             $("#httpTableTBody").delegate("button.btn-success", "click", function () {
                 var interfaceId = $(this).attr("data-interfaceid");
                 $("#myHttpModalLabel").html("编辑HTTP接口");
+                $("#myHttpModal").find("tbody").empty();
                 $.get("interfaceHttp/findInterfaceHttp/" + interfaceId, null, function (data) {
                     console.log(data);
                     $("input[name='protocolInput']").val(data.protocol);
@@ -175,6 +176,7 @@
             //新增HTTP接口
             $("#addHttpInterfaceBtn").click(function () {
                 $("#myHttpModalLabel").html("新增HTTP接口");
+                $("#myHttpModal").find("tbody").empty();
             });
 
             //HTTP接口预览
