--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -104,6 +104,7 @@
             $("#httpTableTBody").delegate("button.btn-success", "click", function () {
                 var interfaceId = $(this).attr("data-interfaceid");
                 $("#myHttpModalLabel").html("编辑HTTP接口");
+                $("#interfaceHttpIdInput").val(interfaceId);
                 $("#myHttpModal").find("tbody").empty();
                 $.get("interfaceHttp/findInterfaceHttp/" + interfaceId, null, function (data) {
                     console.log(data);
@@ -191,6 +192,7 @@
             $("#addHttpInterfaceBtn").click(function () {
                 $("#myHttpModalLabel").html("新增HTTP接口");
                 $("#myHttpModal").find("tbody").empty();
+                $("#interfaceHttpIdInput").val("");
             });
 
             //HTTP接口预览
@@ -382,13 +384,23 @@
 
             //新增HTTP接口
             $("#newInterfaceHttpBtn").click(function () {
-                $.post("interfaceHttp/insertInterfaceHttp", $("#newInterfaceHttpForm").serialize(), function (data) {
-                    console.log(data);
-                    if (data.success) {
-                        $("#myHttpModal").modal("hide");
-                        window.location.reload();
-                    }
-                }, "json");
+                if ($("#interfaceHttpIdInput").val() == null || $("#interfaceHttpIdInput").val() == "") {
+                    $.post("interfaceHttp/insertInterfaceHttp", $("#newInterfaceHttpForm").serialize(), function (data) {
+                        console.log(data);
+                        if (data.success) {
+                            $("#myHttpModal").modal("hide");
+                            window.location.reload();
+                        }
+                    }, "json");
+                } else {
+                    $.post("interfaceHttp/updateInterfaceHttp", $("#newInterfaceHttpForm").serialize(), function (data) {
+                        console.log(data);
+                        if (data.success) {
+                            $("#myHttpModal").modal("hide");
+                            window.location.reload();
+                        }
+                    }, "json");
+                }
             });
 
             //是否传值改变事件
@@ -606,6 +618,8 @@
             </div>
             <div class="modal-body">
                 <form id="newInterfaceHttpForm" role="form">
+                    <!--接口ID-->
+                    <input type="hidden" id="interfaceHttpIdInput" name="interfaceHttpIdInput" value="">
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="form-group">
